--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,40 @@ body {
 }
 
 div.control_panel {
+  display: flex;
   position: absolute;
   width: 20%;
+  height: 20%;
 }
 
-input {
-  width: 100%;
+div.body {
+  width: 98%;
+  height: 100%;
+}
+
+div.close {
+  background: #333;
+  height: 99%;
+  width: 2%;
+}
+
+div.input_row {
+  height: 23%;
+  background: #d9d9d9;
+  padding: 0.5%;
+  display: flex;
+}
+
+input[type=range]{
+  width: 80%;
+}
+
+input[type=number]{
+  width: 12%;
+  margin-left: 2%;
+  margin-right: 1%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 canvas {
