--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,13 @@ input[type=number]{
   margin-bottom: 2%;
 }
 
+button {
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+
 canvas {
   width: 100vw;
   height: 100vh;
