--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ div.control_panel {
 }
 
 div.body {
+  display: flex;
+  flex-direction: column;
   width: 98%;
   height: 100%;
   opacity: 0.3;
@@ -22,7 +24,6 @@ div.body:hover {
 div.close {
   background: #4e4e4e;
   opacity: 0.7;
-  height: 100%;
   width: 2%;
 }
 
@@ -32,9 +33,8 @@ div.close:hover {
 
 div.input_row {
   display: flex;
-  height: 13%;
+  flex-grow: 1;
   background: #d9d9d9;
-  padding: 0.7%;
 }
 
 input[type=range]{
